@@ -11,9 +11,7 @@ import java.awt.event.ActionListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.io.File;
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Vector;
 
 import javax.swing.BorderFactory;
@@ -57,7 +55,7 @@ public class JConfirmDialog extends JDialog
 	JTextField jTextDstFileName;
 	
 	/** 表題再取得 順番 */
-	JComboBox jComboTitle;
+	JComboBox<String> jComboTitle;
 	JCheckBox jCheckPubFirst;
 	/** 表題再取得 順番 */
 	JButton jButtonTitle;
@@ -239,7 +237,7 @@ public class JConfirmDialog extends JDialog
 		panel.setBorder(padding4T);
 		label = new JLabel("本文内");
 		panel.add(label);
-		jComboTitle = new JComboBox(BookInfo.TitleType.titleTypeNames);
+		jComboTitle = new JComboBox<>(BookInfo.TitleType.titleTypeNames);
 		jComboTitle.setFocusable(false);
 		jComboTitle.setMaximumSize(new Dimension(200, 22));
 		jComboTitle.setPreferredSize(new Dimension(200, 22));
@@ -253,7 +251,7 @@ public class JConfirmDialog extends JDialog
 		jButtonTitle = new JButton("再取得");
 		jButtonTitle.setBorder(padding3);
 		jButtonTitle.setPreferredSize(new Dimension(72, 24));
-		try { jButtonTitle.setIcon(new ImageIcon(new URL(imageURLPath+"title_reload.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonTitle.setIcon(new ImageIcon(new URI(imageURLPath+"title_reload.png").toURL())); } catch (Exception e1) {}
 		jButtonTitle.addActionListener(new ActionListener() {public void actionPerformed(ActionEvent arg0) { reloadTitle(); } });
 		panel.add(jButtonTitle);
 		panel.add(new JLabel("   "));
@@ -261,7 +259,7 @@ public class JConfirmDialog extends JDialog
 		jButtonTitleFileName.setToolTipText("ファイル名から設定");
 		jButtonTitleFileName.setBorder(BorderFactory.createEmptyBorder(3, 6, 3, 6));
 		jButtonTitleFileName.setPreferredSize(new Dimension(130, 24));
-		try { jButtonTitleFileName.setIcon(new ImageIcon(new URL(imageURLPath+"filename_copy.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonTitleFileName.setIcon(new ImageIcon(new URI(imageURLPath+"filename_copy.png").toURL())); } catch (Exception e1) {}
 		jButtonTitleFileName.addActionListener(new ActionListener() { public void actionPerformed(ActionEvent arg0) { userFileName(); } });
 		panel.add(jButtonTitleFileName);
 		panel.add(new JLabel("     "));
@@ -347,7 +345,7 @@ public class JConfirmDialog extends JDialog
 		jButton = new JButton("変換実行");
 		jButton.setBorder(paddingButton);
 		jButton.setPreferredSize(new Dimension(80, 26));
-		try { jButton.setIcon(new ImageIcon(new URL(imageURLPath+"apply.png"))); } catch (MalformedURLException e1) {}
+		try { jButton.setIcon(new ImageIcon(new URI(imageURLPath+"apply.png").toURL())); } catch (Exception e1) {}
 		jButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				convert();
@@ -360,7 +358,7 @@ public class JConfirmDialog extends JDialog
 		jButton = new JButton("スキップ");
 		jButton.setBorder(paddingButton);
 		jButton.setPreferredSize(new Dimension(80, 26));
-		try { jButton.setIcon(new ImageIcon(new URL(imageURLPath+"skip.png"))); } catch (MalformedURLException e1) {}
+		try { jButton.setIcon(new ImageIcon(new URI(imageURLPath+"skip.png").toURL())); } catch (Exception e1) {}
 		jButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				skip();
@@ -375,7 +373,7 @@ public class JConfirmDialog extends JDialog
 		jButton = new JButton("処理中止");
 		jButton.setBorder(paddingButton);
 		jButton.setPreferredSize(new Dimension(80, 26));
-		try { jButton.setIcon(new ImageIcon(new URL(imageURLPath+"cancel.png"))); } catch (MalformedURLException e1) {}
+		try { jButton.setIcon(new ImageIcon(new URI(imageURLPath+"cancel.png").toURL())); } catch (Exception e1) {}
 		jButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				cancel();
@@ -504,7 +502,7 @@ public class JConfirmDialog extends JDialog
 		jButtonFirst.setPreferredSize(new Dimension(22, 22));
 		jButtonFirst.setToolTipText("先頭の画像");
 		jButtonFirst.setFocusable(false);
-		try { jButtonFirst.setIcon(new ImageIcon(new URL(imageURLPath+"first.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonFirst.setIcon(new ImageIcon(new URI(imageURLPath+"first.png").toURL())); } catch (Exception e1) {}
 		jButtonFirst.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { movePreviewImage(-100000); }
@@ -515,7 +513,7 @@ public class JConfirmDialog extends JDialog
 		jButtonPrev.setPreferredSize(new Dimension(22, 22));
 		jButtonPrev.setToolTipText("前の画像 (PageUp)");
 		jButtonPrev.setFocusable(false);
-		try { jButtonPrev.setIcon(new ImageIcon(new URL(imageURLPath+"prev.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonPrev.setIcon(new ImageIcon(new URI(imageURLPath+"prev.png").toURL())); } catch (Exception e1) {}
 		jButtonPrev.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { movePreviewImage(-1); }
@@ -526,7 +524,7 @@ public class JConfirmDialog extends JDialog
 		jButtonNext.setPreferredSize(new Dimension(22, 22));
 		jButtonNext.setToolTipText("次の画像 (PageDown)");
 		jButtonNext.setFocusable(false);
-		try { jButtonNext.setIcon(new ImageIcon(new URL(imageURLPath+"next.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonNext.setIcon(new ImageIcon(new URI(imageURLPath+"next.png").toURL())); } catch (Exception e1) {}
 		jButtonNext.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { movePreviewImage(1); }
@@ -547,7 +545,7 @@ public class JConfirmDialog extends JDialog
 		jButtonFitW.setPreferredSize(new Dimension(22, 22));
 		jButtonFitW.setToolTipText("画像の幅に拡大");
 		jButtonFitW.setFocusable(false);
-		try { jButtonFitW.setIcon(new ImageIcon(new URL(imageURLPath+"arrow_horizontal.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonFitW.setIcon(new ImageIcon(new URI(imageURLPath+"arrow_horizontal.png").toURL())); } catch (Exception e1) {}
 		jButtonFitW.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { fitPreviewImage(JCoverImagePanel.FIT_W); }
@@ -558,7 +556,7 @@ public class JConfirmDialog extends JDialog
 		jButtonFitH.setPreferredSize(new Dimension(22, 22));
 		jButtonFitH.setToolTipText("画像の高さに拡大 (中ボタン)");
 		jButtonFitH.setFocusable(false);
-		try { jButtonFitH.setIcon(new ImageIcon(new URL(imageURLPath+"arrow_vertical.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonFitH.setIcon(new ImageIcon(new URI(imageURLPath+"arrow_vertical.png").toURL())); } catch (Exception e1) {}
 		jButtonFitH.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { fitPreviewImage(JCoverImagePanel.FIT_H); }
@@ -590,7 +588,7 @@ public class JConfirmDialog extends JDialog
 		jButtonZoomIn.setPreferredSize(new Dimension(22, 22));
 		jButtonZoomIn.setToolTipText("画像を拡大 (ホイール)");
 		jButtonZoomIn.setFocusable(false);
-		try { jButtonZoomIn.setIcon(new ImageIcon(new URL(imageURLPath+"zoomin.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonZoomIn.setIcon(new ImageIcon(new URI(imageURLPath+"zoomin.png").toURL())); } catch (Exception e1) {}
 		jButtonZoomIn.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { zoomPreview(1.01); }
@@ -603,7 +601,7 @@ public class JConfirmDialog extends JDialog
 		jButtonZoomOut.setPreferredSize(new Dimension(22, 22));
 		jButtonZoomOut.setToolTipText("画像を縮小 (ホイール)");
 		jButtonZoomOut.setFocusable(false);
-		try { jButtonZoomOut.setIcon(new ImageIcon(new URL(imageURLPath+"zoomout.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonZoomOut.setIcon(new ImageIcon(new URI(imageURLPath+"zoomout.png").toURL())); } catch (Exception e1) {}
 		jButtonZoomOut.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { zoomPreview(1/1.01); }
@@ -631,7 +629,7 @@ public class JConfirmDialog extends JDialog
 		jButtonNarrow.setPreferredSize(new Dimension(22, 22));
 		jButtonNarrow.setToolTipText("表紙の幅を狭める (Ctrl+←、右ドラッグ)");
 		jButtonNarrow.setFocusable(false);
-		try { jButtonNarrow.setIcon(new ImageIcon(new URL(imageURLPath+"cover_narrow.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonNarrow.setIcon(new ImageIcon(new URI(imageURLPath+"cover_narrow.png").toURL())); } catch (Exception e1) {}
 		jButtonNarrow.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { setVisibleWidthOffset(-1); }
@@ -644,7 +642,7 @@ public class JConfirmDialog extends JDialog
 		jButtonWide.setPreferredSize(new Dimension(22, 22));
 		jButtonWide.setToolTipText("表紙の幅を広げる (Ctrl+→、右ドラッグ)");
 		jButtonWide.setFocusable(false);
-		try { jButtonWide.setIcon(new ImageIcon(new URL(imageURLPath+"cover_wide.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonWide.setIcon(new ImageIcon(new URI(imageURLPath+"cover_wide.png").toURL())); } catch (Exception e1) {}
 		jButtonWide.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { setVisibleWidthOffset(1); }
@@ -657,7 +655,7 @@ public class JConfirmDialog extends JDialog
 		jButtonCoverFull.setPreferredSize(new Dimension(22, 22));
 		jButtonCoverFull.setToolTipText("表紙の幅を元に戻す");
 		jButtonCoverFull.setFocusable(false);
-		try { jButtonCoverFull.setIcon(new ImageIcon(new URL(imageURLPath+"cover_full.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonCoverFull.setIcon(new ImageIcon(new URI(imageURLPath+"cover_full.png").toURL())); } catch (Exception e1) {}
 		jButtonCoverFull.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { resetVisibleWidth(); }
@@ -675,7 +673,7 @@ public class JConfirmDialog extends JDialog
 		jButtonDelete.setPreferredSize(new Dimension(22, 22));
 		jButtonDelete.setToolTipText("表紙なし");
 		jButtonDelete.setFocusable(false);
-		try { jButtonDelete.setIcon(new ImageIcon(new URL(imageURLPath+"delete.png"))); } catch (MalformedURLException e1) {}
+		try { jButtonDelete.setIcon(new ImageIcon(new URI(imageURLPath+"delete.png").toURL())); } catch (Exception e1) {}
 		jButtonDelete.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent arg0) { deleteCover(); }
